--- a/topoll.cabal
+++ b/topoll.cabal
@@ -27,6 +27,7 @@ library
       Topoll.ChainComplex.Field
       Topoll.ChainComplex.Integers
       Topoll.ChainComplex.Type
+      Topoll.SymplicialSet
   other-modules:
       Paths_topoll
   hs-source-dirs:
@@ -35,6 +36,7 @@ library
   build-depends:
       SmithNormalForm
     , base >=4.7 && <5
+    , containers
     , finite-typelits
     , qlinear
   default-language: Haskell2010
@@ -49,6 +51,7 @@ executable topoll-exe
   build-depends:
       SmithNormalForm
     , base >=4.7 && <5
+    , containers
     , finite-typelits
     , qlinear
     , topoll
@@ -65,6 +68,7 @@ test-suite topoll-test
   build-depends:
       SmithNormalForm
     , base >=4.7 && <5
+    , containers
     , finite-typelits
     , qlinear
     , topoll
