Slightly increase perfomance by skipping d^2 = 0 check

--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
 name:                topoll
 version:             0.1.0.0
-github:              "githubuser/topoll"
+github:              "Sorokin-Anton/topoll"
 license:             BSD3
 author:              "Anton Sorokin"
 maintainer:          "ams200140@gmail.com"
