--- a/topoll.cabal
+++ b/topoll.cabal
@@ -7,8 +7,8 @@ cabal-version: 1.12
 name:           topoll
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/topoll#readme>
-homepage:       https://github.com/githubuser/topoll#readme
-bug-reports:    https://github.com/githubuser/topoll/issues
+homepage:       https://github.com/Sorokin-Anton/topoll#readme
+bug-reports:    https://github.com/Sorokin-Anton/topoll/issues
 author:         Anton Sorokin
 maintainer:     ams200140@gmail.com
 copyright:      2022 Anton Sorokin
@@ -20,7 +20,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/topoll
+  location: https://github.com/Sorokin-Anton/topoll
 
 library
   exposed-modules:
