Some perfomance improvements About 4 seconds for main on my pc

--- a/stack.yaml
+++ b/stack.yaml
@@ -5,3 +5,4 @@ extra-deps:
 - git: https://github.com/Sorokin-Anton/QLinear
   commit: f2e638e6c5a9fe53c78f1194ce123f01899b6558
 - SmithNormalForm-0.1.0.0@sha256:c941b6cff6db301d933e1cf0cfadaa145b74939e8ad6e004348db46e71b76f72,1280
+- bed-and-breakfast-0.5@sha256:02b7f3f18b23f97cf70782f09bed746ecad751f331121a3a43fe97880c25fbce,1597
