--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 ghc-options:
 - -Wall
+- -O2
 
 dependencies:
 - base >= 4.7 && < 5
@@ -23,6 +24,8 @@ dependencies:
 - vector
 - vector-algorithms
 - containers
+- bed-and-breakfast
+- parallel
 
 library:
   source-dirs: src
