--- a/topoll.cabal
+++ b/topoll.cabal
@@ -33,12 +33,14 @@ library
       Paths_topoll
   hs-source-dirs:
       src
-  ghc-options: -Wall
+  ghc-options: -Wall -O2
   build-depends:
       SmithNormalForm
     , base >=4.7 && <5
+    , bed-and-breakfast
     , containers
     , finite-typelits
+    , parallel
     , qlinear
     , vector
     , vector-algorithms
@@ -50,12 +52,14 @@ executable topoll-exe
       Paths_topoll
   hs-source-dirs:
       app
-  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       SmithNormalForm
     , base >=4.7 && <5
+    , bed-and-breakfast
     , containers
     , finite-typelits
+    , parallel
     , qlinear
     , topoll
     , vector
@@ -69,12 +73,14 @@ test-suite topoll-test
       Paths_topoll
   hs-source-dirs:
       test
-  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       SmithNormalForm
     , base >=4.7 && <5
+    , bed-and-breakfast
     , containers
     , finite-typelits
+    , parallel
     , qlinear
     , topoll
     , vector
