--- a/topoll.cabal
+++ b/topoll.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 
@@ -36,6 +36,14 @@ library
       Paths_topoll
   hs-source-dirs:
       src
+  default-extensions:
+      DataKinds
+      ViewPatterns
+      TypeOperators
+      OverloadedLabels
+      TypeApplications
+      GADTs
+      KindSignatures
   ghc-options: -Wall -O2
   build-depends:
       SmithNormalForm
@@ -44,6 +52,7 @@ library
     , containers
     , finite-typelits
     , hmatrix
+    , named
     , parallel
     , qlinear
     , random
@@ -57,6 +66,14 @@ executable topoll-exe
       Paths_topoll
   hs-source-dirs:
       app
+  default-extensions:
+      DataKinds
+      ViewPatterns
+      TypeOperators
+      OverloadedLabels
+      TypeApplications
+      GADTs
+      KindSignatures
   ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       SmithNormalForm
@@ -65,6 +82,7 @@ executable topoll-exe
     , containers
     , finite-typelits
     , hmatrix
+    , named
     , parallel
     , qlinear
     , random
@@ -77,9 +95,19 @@ test-suite topoll-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      RipsSpec
+      WitnessSpec
       Paths_topoll
   hs-source-dirs:
       test
+  default-extensions:
+      DataKinds
+      ViewPatterns
+      TypeOperators
+      OverloadedLabels
+      TypeApplications
+      GADTs
+      KindSignatures
   ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       SmithNormalForm
@@ -88,6 +116,8 @@ test-suite topoll-test
     , containers
     , finite-typelits
     , hmatrix
+    , hspec
+    , named
     , parallel
     , qlinear
     , random
